force-app/main/default/objects/Support_Ticket__c/Support_Ticket__c.object-meta.xml
<CustomObject>
    <label>Support Ticket</label>
    <nameField>
        <displayFormat>Ticket-{00000}</displayFormat>
        <label>Support Ticket Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Tickets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>