force-app/main/default/objects/Support_Ticket__c/fields/Detailed_Description_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description_of_Request__c</fullName>
    <inlineHelpText>Please describe in detail what you are requesting for.</inlineHelpText>
    <label>Detailed Description of Request</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>