force-app/main/default/objects/Support_Ticket__c/fields/Issues_raised_by__c.field-meta.xml
<CustomField>
    <fullName>Issues_raised_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specify which person raised this issue. This helps the support team to login as that user and try to replicate the problem.</inlineHelpText>
    <label>Issue raised by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Support_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>