force-app/main/default/objects/Support_Ticket__c/fields/Link_to_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Record__c</fullName>
    <inlineHelpText>Copy and paste the URL from the record that is impacted 
(i.e. https://gulfsothebysinternational.lightning.force.com/lightning/r/pba__Request__c/a0Q3X00000gjLWAUA8/view?0.source=alohaHeader</inlineHelpText>
    <label>Link to Record</label>
    <type>Url</type>
</CustomField>