force-app/main/default/objects/Support_Ticket__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Contact Manager</fullName>
            </value>
            <value>
                <fullName>Inquiry</fullName>
            </value>
            <value>
                <fullName>Listing</fullName>
            </value>
            <value>
                <fullName>Listing Manager</fullName>
            </value>
            <value>
                <fullName>Portal Listing</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Content Request Form</fullName>
            </value>
            <value>
                <fullName>Report</fullName>
            </value>
            <value>
                <fullName>Dashboard</fullName>
            </value>
            <value>
                <fullName>Workflow Automation</fullName>
            </value>
            <value>
                <fullName>Security &amp; Record Access</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>