force-app/main/default/objects/Support_Ticket__c/fields/request_sub_type__c.field-meta.xml
<CustomField>
    <fullName>request_sub_type__c</fullName>
    <label>Request Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Details__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOC</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
            <value>
                <fullName>Listing Agreement</fullName>
            </value>
            <value>
                <fullName>Property offer Letter</fullName>
            </value>
            <value>
                <fullName>Other legal document</fullName>
            </value>
            <value>
                <fullName>Salary certificate - Bank</fullName>
            </value>
            <value>
                <fullName>Salary Certificate - Travel</fullName>
            </value>
            <value>
                <fullName>VISA NOC</fullName>
            </value>
            <value>
                <fullName>Others (HR Related)</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Payment follow up from Developer</fullName>
            </value>
            <value>
                <fullName>Others (Accounts Related)</fullName>
            </value>
            <value>
                <fullName>EDM</fullName>
            </value>
            <value>
                <fullName>Listing Follow up</fullName>
            </value>
            <value>
                <fullName>FORM A Renewal</fullName>
            </value>
            <value>
                <fullName>Photoshoot</fullName>
            </value>
            <value>
                <fullName>Listing Price Changes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>