force-app/main/default/objects/Support_Ticket__c/fields/Request_time__c.field-meta.xml
<CustomField>
    <fullName>Request_time__c</fullName>
    <label>Request timeline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>You will receive a feedback on your request with 24hrs time.</fullName>
            </value>
            <value>
                <fullName>You will receive a feedback on your request with 48hrs time.</fullName>
            </value>
            <value>
                <fullName>You will receive a feedback on your request with 72hrs time.</fullName>
            </value>
            <value>
                <fullName>You will receive a feedback on your request with 96hrs time.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>